--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "morgan": "~1.9.1",
     "pug": "2.0.0-beta11",
     "mongodb": "^4.1.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "cors": "^2.8.5"
   }
 }
